; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/nfs/gss/extr_gss_krb5_mech.c_gss_append_mbuf.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/nfs/gss/extr_gss_krb5_mech.c_gss_append_mbuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4
@MBUF_WAITOK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gss_append_mbuf(i32* %0, i32* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 0, i64* %8, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %12, label %14

12:                                               ; preds = %3
  %13 = load i32, i32* @EINVAL, align 4
  store i32 %13, i32* %4, align 4
  br label %34

14:                                               ; preds = %3
  %15 = load i32*, i32** %5, align 8
  store i32* %15, i32** %9, align 8
  br label %16

16:                                               ; preds = %24, %14
  %17 = load i32*, i32** %9, align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %19, label %27

19:                                               ; preds = %16
  %20 = load i32*, i32** %9, align 8
  %21 = call i64 @mbuf_len(i32* %20)
  %22 = load i64, i64* %8, align 8
  %23 = add i64 %22, %21
  store i64 %23, i64* %8, align 8
  br label %24

24:                                               ; preds = %19
  %25 = load i32*, i32** %9, align 8
  %26 = call i32* @mbuf_next(i32* %25)
  store i32* %26, i32** %9, align 8
  br label %16

27:                                               ; preds = %16
  %28 = load i32*, i32** %5, align 8
  %29 = load i64, i64* %8, align 8
  %30 = load i64, i64* %7, align 8
  %31 = load i32*, i32** %6, align 8
  %32 = load i32, i32* @MBUF_WAITOK, align 4
  %33 = call i32 @mbuf_copyback(i32* %28, i64 %29, i64 %30, i32* %31, i32 %32)
  store i32 %33, i32* %4, align 4
  br label %34

34:                                               ; preds = %27, %12
  %35 = load i32, i32* %4, align 4
  ret i32 %35
}

declare dso_local i64 @mbuf_len(i32*) #1

declare dso_local i32* @mbuf_next(i32*) #1

declare dso_local i32 @mbuf_copyback(i32*, i64, i64, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
